--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/ehgoodenough/better-dnd"
   },
   "scripts": {
-    "build": "codeglue --stage=production",
+    "build": "codeglue --stage=development",
     "start": "codeglue --stage=development --mode=server",
     "zip": "bestzip build.zip builds/web/*"
   },
